Add AccessToken to ModelAndClaims
